--- a/css/Basis.css
+++ b/css/Basis.css
@@ -44,6 +44,29 @@ picture{
     background-color: #FFFFFF;
     color: #000;
 }
+/* Verkoop en Verhuur kolommen */
+.vKolom{
+    float: left;
+    width: 25%;
+}
+.rij:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+/* Responsive kaders stijlen*/
+@media (max-width: 960px) {
+    .vKolom{
+        width: 50%;
+    }
+}
+
+@media (max-width: 600px) {
+    .vKolom{
+        width: 100%;
+    }
+}
+
 #footer{
     background-color: #2c3e50;
     height: 200px;
@@ -56,6 +79,11 @@ footer h2{
 }
 footer a{
     color: #FFFFFF;
+    font-family: "Open Sans",sans-serif;
+}
+footer p{
+    color: #FFFFFF;
+    line-height: 40%;
     font-family: "Open Sans",sans-serif;
 }
 .navigatie-verticaal{
