--- a/css/Basis.css
+++ b/css/Basis.css
@@ -51,9 +51,6 @@ picture{
     font-family: "Open Sans", sans-serif;
     text-decoration: none;
 }
-#navFirst{
-    padding-left: 0;
-}
 .navigatie a:hover{
     background-color: #FFFFFF;
     color: #000;
@@ -65,7 +62,8 @@ picture{
 footer{
     background-color: #2c3e50;
     height: 200px;
-    padding: 30px;
+    padding: 0 32px 32px;
+
 }
 .footer {
     max-width: 960px;
@@ -96,7 +94,7 @@ footer p{
     color: white;
 }
 .navigatie-verticaal a:hover{
-    color: aqua;
+    color: #3498db;
 }
 .kolom{
     float: left;
@@ -153,11 +151,39 @@ button:hover{
     background-color: #FFFFFF;
 }
 /* Verkoop verhuur */
+.vFilter{
+    display: block;
+    background-color: #2c3e50;
+    height: fit-content;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.vFilter label{
+    margin-left: 8px;
+    margin-right: 8px;
+    font-family: "Open Sans", sans-serif;
+    color: #FFFFFF;
+}
+.vFilter button{
+    border: 2px black;
+    margin-right: 0;
+    margin-left: auto;
+    color: white;
+    background-color: #2c3e50;
+
+}
+.vFilter button:hover{
+    background-color: #ecf0f1;
+    color: black;
+}
 
 /* Verkoop en Verhuur kolommen */
 .vKolom{
     float: left;
     width: 25%;
+}
+.vKolom a{
+    text-decoration: none;
 }
 .rij:after{
     content: "";
@@ -167,13 +193,12 @@ button:hover{
 
 .vBlock {
     background-color: #FAFAFA;
-    margin: 15px;
+    margin: 5px;
 }
 .vBlock img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-
 
 }
 /* Responsive kaders stijlen*/
