--- a/css/basis.css
+++ b/css/basis.css
@@ -66,6 +66,7 @@ picture {
 
 footer {
     background-color: #2c3e50;
+    margin-top: 2rem;
     height: 200px;
     padding: 0 32px 32px;
 
@@ -106,9 +107,9 @@ footer p {
     color: #3498db;
 }
 
-.kolom {
+.kolom33 {
     float: left;
-    width: 33%;
+    width: 33.333%;
 }
 
 footer ul {
@@ -117,7 +118,11 @@ footer ul {
     padding: 0;
 }
 
-
+.rij:after{
+    content: "";
+    display: block;
+    clear: both;
+}
 
 button {
     border: none;
@@ -141,4 +146,22 @@ button:hover {
 .button:hover {
     color: black;
     background-color: #FFFFFF;
+}
+#bevestiging {
+    text-align: center;
+}
+
+a > button {
+    width: 20% ;
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
+.kolom50 {
+    float: left;
+    width: 50%;
+}
+
+form > input {
+    width: auto;
 }
