--- a/css/verkoopverhuur.css
+++ b/css/verkoopverhuur.css
@@ -8,7 +8,13 @@
     text-decoration: none;
 }
 
-.rij:after {
+.vKolom:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.rij3KolomGelijk:after {
     content: "";
     display: table;
     clear: both;
