--- a/css/basis.css
+++ b/css/basis.css
@@ -109,7 +109,7 @@ footer p {
 
 .kolom33 {
     float: left;
-    width: 33.333%;
+    width: 33.33%;
 }
 
 footer ul {
@@ -118,7 +118,7 @@ footer ul {
     padding: 0;
 }
 
-.rij:after{
+.rij3KolomGelijk:after {
     content: "";
     display: block;
     clear: both;
@@ -164,4 +164,34 @@ a > button {
 
 form > input {
     width: auto;
+}
+
+@media (max-width: 600px) {
+    .kolom33 {
+        width: 100%;
+    }
+
+    header > a {
+        display: block;
+        width: 60%;
+        margin-left: 20%;
+        margin-right: 20%;
+
+    }
+
+    header > h1 {
+        opacity: 0;
+        text-indent: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+
+}
+
+@media (max-width: 450px) {
+    nav > a{
+        display: table;
+        width: 100%;
+    }
 }
