--- a/css/basis.css
+++ b/css/basis.css
@@ -39,6 +39,12 @@ picture {
     align-content: left;
     margin: 30px 30px 30px 0;
 }
+/* Fix responsive */
+@media (max-width: 600px) {
+    .navigatie{
+        display: block;
+    }
+}
 
 .navigatie {
     background-color: #2980b9;
