--- a/css/basis.css
+++ b/css/basis.css
@@ -167,6 +167,11 @@ a > button {
     float: left;
     width: 50%;
 }
+.rij:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 
 form > input {
     width: auto;
