--- a/css/basis.css
+++ b/css/basis.css
@@ -1,8 +1,8 @@
 /* Index en general */
 html {
     height: 100%;
-    box-sizing: border-box;
 }
+
 
 body {
     background-color: #ecf0f1;
@@ -14,6 +14,17 @@ body {
 .limited {
     max-width: 960px;
     margin: auto;
+
+}
+
+#headerimg {
+    height: auto;
+    width: 100%;
+}
+
+.active{
+    pointer-events: none;
+    cursor: default;
 }
 
 header h1 {
@@ -21,7 +32,6 @@ header h1 {
     color: black;
     font-family: "Panton Black Caps", sans-serif;
     font-size: 160%;
-
 }
 
 header div {
@@ -40,17 +50,17 @@ picture {
     margin: 30px 30px 30px 0;
 }
 
-
 .navigatie {
     background-color: #2980b9;
     overflow: hidden;
+    max-width: 100%;
 }
 
 .navigatie a {
     float: left;
     color: #FFFFFF;
     text-align: center;
-    padding: 16px;
+    padding: 3%;
     font-size: 18px;
     text-decoration: none;
 }
@@ -67,17 +77,18 @@ picture {
 
 footer {
     background-color: #2c3e50;
-    margin-top: 2rem;
-    height: 200px;
-    padding: 0 32px 32px;
-
+    height: auto;
+    width: 100%;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    position: fixed;
+    bottom: 0;
 }
 
 .footer {
     max-width: 960px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 footer h2 {
@@ -148,21 +159,26 @@ button:hover {
     color: black;
     background-color: #FFFFFF;
 }
+
 #bevestiging {
     text-align: center;
 }
 
 a > button {
-    width: 20% ;
+    width: 20%;
     margin-left: 40%;
     margin-right: 40%;
 }
 
 .kolom50 {
+    box-sizing: border-box;
+    overflow: auto;
     float: left;
     width: 50%;
+    padding-left: 10px;
 }
-.rij:after{
+
+.rij:after {
     content: "";
     display: table;
     clear: both;
@@ -212,7 +228,7 @@ form > input {
 }
 
 @media (max-width: 450px) {
-    nav > a{
+    nav > a {
         display: table;
         width: 100%;
     }
