--- a/css/basis.css
+++ b/css/basis.css
@@ -11,6 +11,11 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+p {
+    box-sizing: border-box;
+    padding: 0 1em;
+}
+
 .limited {
     max-width: 960px;
     margin: auto;
@@ -77,12 +82,12 @@ picture {
 
 footer {
     background-color: #2c3e50;
-    height: auto;
     width: 100%;
-    padding-bottom: 8px;
-    padding-top: 8px;
-    position: fixed;
+    padding-bottom: 3em;
+    position: relative;
     bottom: 0;
+    box-sizing: border-box;
+    height: 14em;
 }
 
 .footer {
@@ -121,6 +126,8 @@ footer p {
 
 .kolom33 {
     float: left;
+    box-sizing: border-box;
+    padding: 1em;
     width: 33.33%;
 }
 
@@ -149,9 +156,7 @@ button:hover {
 }
 
 .button {
-    border: none;
     color: white;
-    padding: 16px 28px;
     background-color: #2980b9;
 }
 
@@ -188,6 +193,12 @@ form > input {
     width: auto;
 }
 
+@media (max-width: 960px) {
+    #logo {
+        margin-left: 2em;
+    }
+}
+
 @media (max-width: 600px) {
     .kolom33 {
         width: 100%;
@@ -221,7 +232,7 @@ form > input {
     footer {
         background-color: #2c3e50;
         margin-top: 2rem;
-        height: 500px;
+        height: 40em;
         padding: 0 32px 32px;
 
     }
