--- a/css/contact.css
+++ b/css/contact.css
@@ -15,6 +15,15 @@ form {
     font-size: 90%;
 }
 
+.vBlock{
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+#contactUren {
+    width: 300px;
+}
+
 .button {
     margin: 20px;
 }
