--- a/css/verkoopverhuur.css
+++ b/css/verkoopverhuur.css
@@ -4,14 +4,9 @@
     width: 25%;
 }
 
-.vKolom a {
+a {
     text-decoration: none;
-}
-
-.vKolom:after{
-    content: "";
-    display: table;
-    clear: both;
+    color: black;
 }
 
 .rij3KolomGelijk:after {
@@ -25,6 +20,7 @@
     padding: 5px;
     box-sizing: border-box;
     display: inline-block;
+    margin: 0.5em 0.25em;
 }
 
 h3 {
@@ -37,9 +33,16 @@ h3 {
 .vFilter {
     display: block;
     background-color: #2c3e50;
-    height: fit-content;
+    height: 3em;
     margin-top: 16px;
     margin-bottom: 16px;
+    box-sizing: border-box;
+    padding: 0.5em;
+}
+
+.vFilter:after{
+    content: "";
+    clear: both;
 }
 
 .vFilter label {
@@ -47,18 +50,20 @@ h3 {
     margin-right: 8px;
     font-family: "Open Sans", sans-serif;
     color: #FFFFFF;
+    float: left;
 }
 
-.vFilter button {
-    border: 2px black;
+#vFilterBtn {
     margin-right: 0;
-    margin-left: auto;
     color: white;
+    box-sizing: border-box;
     background-color: #2c3e50;
-
+    float: right;
+    height: 1em;
+    font-family: "Open Sans", sans-serif;
 }
 
-.vFilter button:hover {
+#vFilterBtn:hover {
     background-color: #ecf0f1;
     color: black;
 }
