--- a/css/basis.css
+++ b/css/basis.css
@@ -3,10 +3,13 @@ html {
     height: 100%;
 }
 
-main > .limited{
+main > .limited {
     background-color: #F5F5F5
 }
 
+.outline {
+    display: none;
+}
 
 body {
     background-color: #ecf0f1;
@@ -33,7 +36,7 @@ p {
     margin-right: 5%;
 }
 
-.active{
+.active {
     pointer-events: none;
     cursor: default;
     background-color: #2c3e50;
@@ -68,7 +71,7 @@ picture {
 #logo {
     float: left;
     align-content: left;
-    margin: 30px 30px 30px 0;
+    margin: 2em 0;
 }
 
 .navigatie {
@@ -95,9 +98,6 @@ picture {
     background-color: #2c3e50;
     color: #FFFFFF;
 }
-
-
-
 
 footer {
     background-color: #2c3e50;
@@ -187,7 +187,7 @@ button:hover {
     text-align: center;
 }
 
-a > button {
+a > button not #vFilterBtn{
     width: 20%;
     margin-left: 40%;
     margin-right: 40%;
@@ -217,7 +217,11 @@ form > input {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
+    .contactI {
+        width: 98%;
+    }
+
     .kolom33 {
         width: 100%;
     }
@@ -235,14 +239,14 @@ form > input {
 
     }
 
-    nav > a {
-        float: none;
-        width: 100%;
-    }
-
     nav {
         float: none;
         text-align: center;
+    }
+
+    nav > a {
+        float: none;
+        width: 100%;
     }
 
     header > h1 {
@@ -258,6 +262,7 @@ form > input {
         padding: 0 32px 32px;
         margin: auto;
         text-align: center;
+        overflow: -moz-scrollbars-none scroll;
     }
 
     .footer {
@@ -275,11 +280,21 @@ form > input {
 }
 
 @media screen and (max-width: 450px) {
+    nav {
+        float: none;
+        text-align: center;
+    }
+
     nav > a {
         display: table;
         width: 100%;
     }
 
+    header > a {
+        display: block;
+        width: 60%;
+        margin: 0;
 
+    }
 
 }
