--- a/css/contact.css
+++ b/css/contact.css
@@ -6,13 +6,12 @@
 }
 
 form {
-    color: black;
-    font-family: "Open Sans", sans-serif;
+    box-sizing: border-box;
+    padding: 0 20px;
 }
 
-form {
-    box-sizing: border-box;
-    margin: 0 20px 4em;
+main {
+    margin-bottom: 40000em;
 }
 
 #sbutton {
@@ -20,38 +19,33 @@ form {
     height: 50px;
     border-style: none;
     margin-top: 0.5em;
-    float: right;
 }
 
-label[for=berichtVeld]{
-    float: right;
-    margin: 4px 0;
+#maincontact {
+    float: left;
 }
 
-textarea {
-    float: right;
-}
-
-#sbutton:hover{
+#sbutton:hover {
     border: solid grey;
 }
 
-.contactI {
-    font-family: "Open Sans", sans-serif;
-    font-size: 90%;
-}
 
-.vBlock{
+.vBlock {
     box-sizing: border-box;
     display: inline-block;
+
+}
+
+.detailInfo {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 30%;
+    padding-left: 3%;
+    margin-bottom: 4em;
 }
 
 #contactUren {
     width: 300px;
-}
-
-.button {
-    margin: 20px;
 }
 
 .oUren p {
@@ -62,8 +56,19 @@ textarea {
     margin-left: 16px;
 }
 
-@media (max-width: 600px) {
-    .kolom50{
+@media screen and (max-width: 600px) {
+    .kolom50 {
         width: 100%;
+    }
+
+    section > #gevelFoto {
+        width: 80%;
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+
+    .detailInfo {
+        width: 80%;
+        margin: auto;
     }
 }
