--- a/css/verkoopverhuur.css
+++ b/css/verkoopverhuur.css
@@ -12,7 +12,7 @@ a {
 img not #logo {
     box-sizing: border-box;
     border: solid grey 1px;
-    box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.45);
+    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.45);
 }
 
 .rij3KolomGelijk:after {
@@ -27,14 +27,14 @@ img not #logo {
     box-sizing: border-box;
     display: inline-block;
     margin: 0.5em 0.25em;
-    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.75);
 }
 
-.vBlock:hover{
-    box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.75) ;
+.vBlock:hover {
+    box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.75);
 }
 
-.mini{
+.mini {
     margin: 0;
     box-sizing: border-box;
     border: solid grey 2px;
@@ -59,11 +59,11 @@ form {
     margin-top: 0.5em;
 }
 
-label[for=berichtVeld]{
+label[for=berichtVeld] {
     margin: 4px 0;
 }
 
-label[for=berichtVeld]:after{
+label[for=berichtVeld]:after {
     margin: 4px 0;
 }
 
@@ -71,29 +71,33 @@ label[for=berichtVeld]:after{
     float: left;
 }
 
-#sbutton:hover{
+#sbutton:hover {
     border: solid grey;
 }
 
 .mini {
-     margin-left: 2em;
+    margin-left: 2em;
 }
 
 /* Verkoop verhuur */
-.vFilter {
-    display: block;
+
+#vFilterBtn {
+    margin-right: 0;
+    color: white;
+    box-sizing: content-box;
     background-color: #2c3e50;
-    height: 3em;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    box-sizing: border-box;
+    float: right;
     padding: 0.5em;
+    height: 1em;
+    width: 12em;
+    font-family: "Open Sans", sans-serif;
 }
 
-.vFilter:after{
-    content: "";
-    clear: both;
+#vFilterBtn:hover {
+    background-color: #ecf0f1;
+    color: black;
 }
+
 
 .vFilter label {
     margin-left: 8px;
@@ -103,27 +107,30 @@ label[for=berichtVeld]:after{
     float: left;
 }
 
-#vFilterBtn {
-    margin-right: 0;
-    color: white;
-    box-sizing: border-box;
-    background-color: #2c3e50;
-    float: right;
-    height: 1em;
-    font-family: "Open Sans", sans-serif;
-}
 
-#vFilterBtn:hover {
-    background-color: #ecf0f1;
-    color: black;
-}
+
 img .vImg {
     margin-top: 4px;
 }
 
-.rij4KolomGelijk:after{
+.rij4KolomGelijk:after {
     content: "";
     display: table;
+    clear: both;
+}
+
+.vFilter {
+    display: block;
+    background-color: #2c3e50;
+    height: 4em;
+    margin: 2em auto;
+    box-sizing: border-box;
+    padding: 1em;
+    max-width: 960px;
+}
+
+.vFilter:after {
+    content: "";
     clear: both;
 }
 
@@ -142,7 +149,7 @@ img .vImg {
     .vFilter {
         display: table;
         background-color: #2c3e50;
-        height:auto;
+        height: auto;
         margin-top: 16px;
         margin-bottom: 16px;
         box-sizing: border-box;
