--- a/css/basis.css
+++ b/css/basis.css
@@ -99,6 +99,18 @@ picture {
     color: #FFFFFF;
 }
 
+.h2Offset {
+    margin-left: 1em;
+}
+
+.uitleg {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 12em;
+    line-height: 200%;
+}
+
 footer {
     background-color: #2c3e50;
     width: 100%;
@@ -209,6 +221,13 @@ a > button not #vFilterBtn{
 
 form > input {
     width: auto;
+}
+
+#contactReturn{
+    width: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+    margin-bottom: 18em;
 }
 
 @media screen and (max-width: 960px) {
