--- a/css/detail.css
+++ b/css/detail.css
@@ -2,6 +2,8 @@ h3 {
     font-weight: normal;
 }
 
+
+
 img not #logo {
    margin: 2%;
 }
@@ -15,6 +17,14 @@ img not #logo {
     content: "";
     display: table;
     clear: both;
+}
+
+.locationImg {
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 3em;
+    width: 84%;
+    height: auto;
 }
 
 @media (max-width: 960px) {
